--- a/cache.html
+++ b/cache.html
@@ -43,7 +43,7 @@
     </style>
   </head>
   <body>
-    <h2>PSFree: A PS4 9.00 Exploit Chain</h2>
+    <h2>PSFree: A PS4 7.00 - 9.60 Exploit Chain</h2>
     <div>
       <button id="jailbreakBtn">Start Jailbreak</button>
     </div>
